src/test/resources/nox/errors/err_stack_overflow.nox
// @test:error "StackOverflowError"
int recurse() {
    return recurse();
}
main() {
    return recurse();
}
